--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
